Finished the responsiveness functionality

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
   <body>
     <header class="header">
       <nav class="header-nav">
+        <img src="images/icon-hamburger.svg" alt="nav menu" class="nav-menu" />
         <ul class="header-list">
+          <li class="header-item">
+            <img
+              src="images/icon-close.svg"
+              alt="logo"
+              class="header-logo header-logo-close"
+            />
+          </li>
           <li class="header-item">
             <img src="images/logo.svg" alt="logo" class="header-logo" />
           </li>
@@ -50,10 +58,7 @@
           class="header-img"
         />
         <div class="header-content">
-          <h1 class="header-title">
-            Dicover innovative <br />
-            ways to decorate
-          </h1>
+          <h1 class="header-title">Dicover innovative ways to decorate</h1>
           <p class="header-text">
             We provide unmatched quality, comfort, and style for property owners
             across the country. Our experts combine form and function in
